v1.10 / 30-MAR-2022

- Adjusted contact e-mail address
- Changed the usage help
- Modified the synopsis in the manual page

v1.9 / 12-FEB-2018

- Manual page additions

v1.8 / 12-FEB-2018

- General makefile improvements

v1.7 / 10-FEB-2018

- Long output (-l / --long) will now also print the VG UUID (third
  column)

v1.6 / 10-FEB-2018

- Manual page corrections

v1.5 / 09-FEB-2018

- Added a manual page (section 8) and scripts for automatic man
  page creation

v1.4 / 14-AUG-2017

- Fixed pre-C99 compile issues
- Updated README

v1.3 / 04-NOV-2016

- Added support for processing multiple block devices in one call
- Added --long (-l) option for long output (including the block
  device name)

v1.2 / 04-NOV-2016

- Code clean up for better readability
- Changed 'make dist' to exclude SVN control files from the tar
  archive

v1.1 / 23-OCT-2016

- Changed the default PREFIX for 'make install' to /usr/local
- Improved handling of command line options through getopt_long()
- Improved LVM2 PV detection by scanning for "LABELONE" within the
  first four sectors
- Added this CHANGES file

v1.0 / 19-OCT-2016

- Initial version